# condacolab

./: CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  condacolab.py  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml.disabled
constructor-example/: condacolab_constructor_tutorial.ipynb  construct.yaml  install-pip-dependencies.sh  pip-dependencies.sh
