[tool.poetry]
name = "condacolab"
version = "0.1.4"
description = "Install Conda and friends on Google Colab, easily"
readme = "README.md"
authors = ["Jaime Rodríguez-Guerra <jaimergp@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/jaimergp/condacolab"
repository = "https://github.com/jaimergp/condacolab"

[tool.poetry.dependencies]
python = "^3.7"
"ruamel.yaml" = ">=0.11.14,<0.17"
ipython = ">=4"
ipywidgets = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
